pages/About.module.scss
@import "../styles/sass/variables";
@import "../styles/sass/mixins";

.about__card {
  background-color: #fff;
  @include flex-container-col;
  justify-content: center;
  align-items: flex-start;
  width: calc(100% - 15%);
  margin-top: 1rem;
  min-height: 40rem;
  padding: 3.5rem;
  border-radius: 2rem;
  box-shadow: $box-shadow;
}

.btn__container {
  @include flex-container-row;
  justify-content: space-between;
  align-items: center;
  padding-top: 1.5rem;
}

.details {
  background-color: #fff;
  transform: translateX(2rem);
  width: 93%;
  hyphens: auto;
}

.dev {
  font-size: 2rem;
  font-weight: 100;
}

.flex__container {
  @include flex-container-row;
  justify-content: flex-start;
  width: 85%;

  &Col {
    @include flex-container-col;
    align-items: flex-start;
    justify-content: space-evenly;
    padding-left: 2rem;
  }

  &__col {
    width: 85%;
    padding: $padding-section-md;
  }

  &Heading {
    @include flex-container-row;
    justify-content: flex-start;
    align-items: center;
    transform: translateX(2.2rem);
  }
}

.headings__container {
  @include flex-container-col;
  align-items: flex-start;
  text-align: left;
  justify-content: flex-start;
}

.icons {
  @include flex-container-row;
  justify-content: space-evenly;
  align-items: center;
  // transform: translateX(-5rem);
}

// .img {
//   padding: 1rem;
// }

.lr {
  // font-family: $font-header;
  font-weight: bolder;
  font-size: 4rem;
  text-align: center;
}

.me {
  position: relative;
  border-radius: 50%;
}

.social_media:hover {
  filter: invert(0.3) sepia(0.6) saturate(19.6) hue-rotate(170.2deg)
    brightness(1.57);
  transition: all 0.22s ease-out;
}

//MEDIA QUERIES
@media screen and (max-width: 991px) {
  .about__card {
    padding: 6rem;
    width: 100%;
    transform: translateX(0);
  }

  .details {
    transform: translateX(0);

    & > p {
      font-size: 1.3rem !important;
    }
  }

  .flex__container {
    display: flex;
    position: relative;
    flex-direction: unset;
    flex-wrap: wrap;

    &Heading {
      transform: translateX(0);
    }
  }

  // .lr,
  // .dev {
  //   transform: translateY(1rem);
  // }

  .dev {
    font-size: 2rem;
    padding-top: 0 !important;
  }

  // .icons {
  //   transform: translateX(-2rem);
  // }

  .img__holder {
    transform: translate(28rem, 7rem);
  }

  .lr {
    font-size: 3rem;
  }
}

@media screen and (max-width: 767px) {
  .img__holder {
    transform: translate(19rem, 5rem);
  }
}

@media screen and (max-width: 600px) {
  .btn__container {
    padding-top: 0;
    flex-direction: column-reverse;
  }

  .details {
    text-align: center;
    // margin-top: 1rem;

    & > p {
      transform: translateY(0);
      margin-bottom: 0 !important;
    }
  }

  // .icons {
  //   transform: translateX(0);
  // }

  .about__card {
    padding: 2rem;
    transform: translateX(0);
    align-items: center;
    width: 75%;
  }

  .img {
    padding: 5px;
  }

  .flex__container {
    margin-top: 0;

    &Col {
      line-height: 1 !important;
      padding-left: 0;
      align-items: center;
    }

    &Heading {
      padding-left: 0;
      padding-bottom: 0;
      margin-top: 0;
      flex-direction: column;
      align-items: center;
      justify-content: center;
    }
  }
}

@media screen and (max-width: 600px) {
  .skill__list{
    justify-content: center!important;
    // margin-bottom: 15px;
  }

}

@media screen and (max-width: 585px) {

  .about__card {
    padding: 3rem;
  }

  .dev {
    padding-top: 0 !important;
    z-index: 3;
    font-size: 1.5rem;
  }

  .img__holder {
    transform: translate(19rem, 5rem);
  }

  .lr {
    font-size: 2rem;
  }
}

@media screen and (max-width: 1399px) {
  .flex__container__col {
    padding: 8rem 0;
  }
}

@media screen and (max-width: 767px) {
  .flex__container__col {
    padding: 7rem 0;
  }
}

// @media screen and (max-width: 500px) {
//   .flex__container__col {
//     padding: 5rem 0;
//   }
// }

@media screen and (max-width: 450px) {
  .pg{
    display: flex;
    flex-direction: column-reverse;
  }

  .flex__container__col {
    padding: 10rem 0;
  }
  
  .about__card {
    width: 100%;
    padding: 1.5rem;
  }

  .img {
    padding: 2px;
    transform: scale(0.8);
  }
}

